--- a/web/css/style.css
+++ b/web/css/style.css
@@ -15,6 +15,7 @@ html, body {
 	width: 100%;
 	height: 100%;
 	display: table;
+	position: relative;
 }
 
 .popover {
@@ -48,8 +49,8 @@ html, body {
 	min-height: 100%;
 	background-color: #eaeaea;
 	display: table-cell;
-	padding: 0 1em 0 1em;
-	vertical-align: top;
+	padding: 0 1em 7% 1em;
+	vertical-align: top;;
 }
 
 #header, #lecontenu, #footer {
@@ -59,6 +60,7 @@ html, body {
 	min-height: 5%;
 	text-align: right;
 	margin: auto;
+	padding: .5em 0em 1em 0em;
 	width: 91%;
 }
 
@@ -70,9 +72,11 @@ html, body {
 }
 
 #footer {
+	max-height: 10%;
 	margin: auto;
+	padding-bottom: 1em;
 	text-align: center;
-	width: 91%;
+	position: absolute;
 }
 
 .legal,
@@ -107,9 +111,8 @@ html, body {
 }
 
 #logosictiampetit {
-	width: 7%;
 	display: inline-block;
-	right: 0;
+	float: right;
 }
 
 /*-------------------------     FIN HEADER FOOTER     -------------------------*/
