--- a/web/css/circuit.css
+++ b/web/css/circuit.css
@@ -56,14 +56,10 @@
 
 .perso_circuit {
 	text-align: center;
-	margin: 10px;
+    margin: auto;
     max-width: 100px;
-    width: 100px;
     max-height: 150px;
-    height: 150px;
     padding: .5em;
-    word-break: break-all;
-	overflow: hidden;
     cursor: -webkit-grab;
     cursor: -moz-grab;
 }
@@ -99,7 +95,8 @@
 
 .emplacement {
     width: 100px;
-    height: 150px;
+    height: 120px;
+    margin-top: 1em;
     background-color: rgba(50, 133, 171, 0.2);
 }
 
