bon positionnement du footer avec JS ; début modification liste

--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/liste.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/liste.html.twig
@@ -15,8 +15,8 @@
             <tr class="classeur-row" data-id="{{ classeur.id }}">
                 <td>{{ classeur.nom }}</td>
                 <td>inter</td>
-                <td>{% if classeur.creation %}{{ classeur.creation | date('d-m-Y H:i:s') }}{% endif %}</td>
-                <td>{% if classeur.validation %}{{ classeur.validation | date('d-m-Y H:i:s') }}{% endif %}</td>
+                <td>{% if classeur.creation %}{{ classeur.creation | date('d/m/Y H:i:s') }}{% endif %}</td>
+                <td>{% if classeur.validation %}{{ classeur.validation | date('d/m/Y H:i:s') }}{% endif %}</td>
                 <td class="statut">
                     <span class="glyphicon statut_{{ classeur.status }}"></span>
                 </td>
