--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/edit.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/edit.html.twig
@@ -4,9 +4,26 @@
     <div class="bloc_page">
         {% if classeur.isValidable(app.user.id) %}
             {% if classeur.isSignable(app.user.id) %}
-                <form class="form_action" action="{{ path("classeur_valider_et_signer") }}" method="post">
+                <form class="form_action" id="signform">
                     <button type="submit" class="btn btn-valider">Valider et Signer</button>
                     <input type="hidden" value="{{ classeur.id }}" name="id"/>
+                    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                                    <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                                </div>
+                                <div class="modal-body">
+                                    ...
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                    <button type="button" class="btn btn-primary">Save changes</button>
+                                </div>
+                            </div><!-- /.modal-content -->
+                        </div><!-- /.modal-dialog -->
+                    </div><!-- /.modal -->
                 </form>
             {% else %}
                 <form class="form_action" action="{{ path("classeur_valider") }}" method="post">
@@ -57,6 +74,10 @@
             <div id="circuitcontent"></div>
             <br>
 
+
+
+
+
             {% block extraform %}
             {% endblock %}
 
@@ -67,6 +88,12 @@
                 </button>
             </div>
         </form>
+
+
+
+
+
+
         <script type="application/javascript">
             $("#btn_modifier").click(function () {
                 $("#name, #desc").removeAttr("disabled");
@@ -77,7 +104,20 @@
 
             $(document).ready(function () {
                 $('#documentcontent').load(Routing.generate('edit_document_for_classeur', {id: {{ classeur.id }}}));
+                $('#signform').submit(function(e){
+
+
+                    $('#myModal').modal({
+                        backdrop: 'static'
+                    });
+                    e.preventDefault();
+                    e.stopImmediatePropagation();
+                    return false;
+
+                });
             });
+
+
 
 
         </script>
